--- a/home/kitty/default/.config/kitty/kitty.conf
+++ b/home/kitty/default/.config/kitty/kitty.conf
@@ -1,52 +1,83 @@
+# vim:ft=kitty
+
 font_family CaskaydiaMono Nerd Font Mono
 font_size 11.0
 
-# gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
-# This work is licensed under the terms of the MIT license.
-# For a copy, see https://opensource.org/licenses/MIT.
+## name:     Catppuccin Kitty Frappé
+## author:   Catppuccin Org
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/themes/frappe.conf
+## blurb:    Soothing pastel theme for the high-spirited!
 
-background  #282828
-foreground  #ebdbb2
 
-cursor                #928374
 
-selection_foreground  #928374
-selection_background  #3c3836
+# The basic colors
+foreground              #c6d0f5
+background              #303446
+selection_foreground    #303446
+selection_background    #f2d5cf
 
-color0  #282828
-color8  #928374
+# Cursor colors
+cursor                  #f2d5cf
+cursor_text_color       #303446
+
+# URL underline color when hovering with mouse
+url_color               #f2d5cf
+
+# Kitty window border colors
+active_border_color     #babbf1
+inactive_border_color   #737994
+bell_border_color       #e5c890
+
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
+
+# Tab bar colors
+active_tab_foreground   #232634
+active_tab_background   #ca9ee6
+inactive_tab_foreground #c6d0f5
+inactive_tab_background #292c3c
+tab_bar_background      #232634
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #303446
+mark1_background #babbf1
+mark2_foreground #303446
+mark2_background #ca9ee6
+mark3_foreground #303446
+mark3_background #85c1dc
+
+# The 16 terminal colors
+
+# black
+color0 #51576d
+color8 #626880
 
 # red
-color1                #cc241d
-# light red
-color9                #fb4934
+color1 #e78284
+color9 #e78284
 
 # green
-color2                #98971a
-# light green
-color10               #b8bb26
+color2  #a6d189
+color10 #a6d189
 
 # yellow
-color3                #d79921
-# light yellow
-color11               #fabd2d
+color3  #e5c890
+color11 #e5c890
 
 # blue
-color4                #458588
-# light blue
-color12               #83a598
+color4  #8caaee
+color12 #8caaee
 
 # magenta
-color5                #b16286
-# light magenta
-color13               #d3869b
+color5  #f4b8e4
+color13 #f4b8e4
 
 # cyan
-color6                #689d6a
-# lighy cyan
-color14               #8ec07c
+color6  #81c8be
+color14 #81c8be
 
-# light gray
-color7                #a89984
-# dark gray
-color15               #928374
+# white
+color7  #b5bfe2
+color15 #a5adce
