Switch kitty theme to evergarden

--- a/home/kitty/default/.config/kitty/kitty.conf
+++ b/home/kitty/default/.config/kitty/kitty.conf
@@ -3,81 +3,58 @@
 font_family CaskaydiaMono Nerd Font Mono
 font_size 11.0
 
-## name:     Catppuccin Kitty Frappé
-## author:   Catppuccin Org
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/themes/frappe.conf
-## blurb:    Soothing pastel theme for the high-spirited!
+## name: evergarden winter green
+## author: comfysage
+## license: GPL-3.0
+## blurb: a comfy colorscheme for cozy morning coding
 
+foreground               #f8f9e8
+background               #1d2428
+selection_foreground     #f8f9e8
+selection_background     #3d494d
 
+wayland_titlebar_color   #171c1f
+macos_titlebar_color     #171c1f
 
-# The basic colors
-foreground              #c6d0f5
-background              #303446
-selection_foreground    #303446
-selection_background    #f2d5cf
+cursor                   #cae0a7
+cursor_text_color        #171c1f
 
-# Cursor colors
-cursor                  #f2d5cf
-cursor_text_color       #303446
+url_color                #b2cfed
 
-# URL underline color when hovering with mouse
-url_color               #f2d5cf
+active_tab_foreground    #171c1f
+active_tab_background    #cae0a7
 
-# Kitty window border colors
-active_border_color     #babbf1
-inactive_border_color   #737994
-bell_border_color       #e5c890
-
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
-
-# Tab bar colors
-active_tab_foreground   #232634
-active_tab_background   #ca9ee6
-inactive_tab_foreground #c6d0f5
-inactive_tab_background #292c3c
-tab_bar_background      #232634
-
-# Colors for marks (marked text in the terminal)
-mark1_foreground #303446
-mark1_background #babbf1
-mark2_foreground #303446
-mark2_background #ca9ee6
-mark3_foreground #303446
-mark3_background #85c1dc
-
-# The 16 terminal colors
+inactive_tab_foreground  #6f8788
+inactive_tab_background  #171c1f
 
 # black
-color0 #51576d
-color8 #626880
+color0   #1d2428
+color8   #2d393d
 
 # red
-color1 #e78284
-color9 #e78284
+color1   #f57f82
+color9   #f57f82
 
 # green
-color2  #a6d189
-color10 #a6d189
+color2   #cae0a7
+color10  #cae0a7
 
 # yellow
-color3  #e5c890
-color11 #e5c890
+color3   #f5d098
+color11  #f5d098
 
 # blue
-color4  #8caaee
-color12 #8caaee
+color4   #b2cfed
+color12  #b2cfed
 
-# magenta
-color5  #f4b8e4
-color13 #f4b8e4
+# purple
+color5   #f3c0e5
+color13  #f3c0e5
 
-# cyan
-color6  #81c8be
-color14 #81c8be
+# aqua
+color6   #addeb9
+color14  #addeb9
 
 # white
-color7  #b5bfe2
-color15 #a5adce
+color7   #f8f9e8
+color15  #96b4aa
