Switch to evergarden spring theme for kitty

--- a/home/kitty/default/.config/kitty/kitty.conf
+++ b/home/kitty/default/.config/kitty/kitty.conf
@@ -3,33 +3,33 @@
 font_family CaskaydiaMono Nerd Font Mono
 font_size 11.0
 
-## name: evergarden winter green
+## name: evergarden spring green
 ## author: comfysage
 ## license: GPL-3.0
 ## blurb: a comfy colorscheme for cozy morning coding
 
 foreground               #f8f9e8
-background               #1d2428
+background               #2b3538
 selection_foreground     #f8f9e8
 selection_background     #3d494d
 
-wayland_titlebar_color   #171c1f
-macos_titlebar_color     #171c1f
+wayland_titlebar_color   #1c2225
+macos_titlebar_color     #1c2225
 
 cursor                   #cae0a7
-cursor_text_color        #171c1f
+cursor_text_color        #1c2225
 
 url_color                #b2cfed
 
-active_tab_foreground    #171c1f
+active_tab_foreground    #1c2225
 active_tab_background    #cae0a7
 
 inactive_tab_foreground  #6f8788
-inactive_tab_background  #171c1f
+inactive_tab_background  #1c2225
 
 # black
-color0   #1d2428
-color8   #2d393d
+color0   #2b3538
+color8   #313b40
 
 # red
 color1   #f57f82
