--- a/home/i3/default/.config/i3/workspace.conf
+++ b/home/i3/default/.config/i3/workspace.conf
@@ -1,8 +1,8 @@
-set $ws1 "[1]"
-set $ws2 "[2]"
-set $ws3 "[3]"
-set $ws4 "[4]"
-set $ws5 "[5]"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
 
 exec --no-startup-id i3-msg workspace $ws1
 
